--- a/middle_end/closure/BUILD.bazel
+++ b/middle_end/closure/BUILD.bazel
@@ -12,7 +12,7 @@ load("//config:BUILD.bzl",
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS    = ROOT_MODULE_OPTS
 
-STDLIB = ["//stdlib"]
+STDLIB = ["//boot:stdlib"]
 
 bootstrap_library(
     name = "closure",
