--- a/asmcomp/BUILD.bazel
+++ b/asmcomp/BUILD.bazel
@@ -1,3 +1,4 @@
+
 load("//bzl:rules.bzl",
      "bootstrap_archive",
      "bootstrap_library",
@@ -10,7 +11,7 @@ load("//config:BUILD.bzl", "ROOT_MODULE_OPTS", "ROOT_SIG_OPTS")
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS = ROOT_SIG_OPTS
 
-STDLIB = ["//stdlib"]
+STDLIB = ["//boot:stdlib"]
 
 ## dev/test target, builds everything
 bootstrap_archive(
@@ -22,7 +23,7 @@ bootstrap_archive(
         ":Asmlink",
         ":Asmpackager",
         ":Branch_relaxation",
-        ":Branch_relaxation_intf",
+        # ":Branch_relaxation_intf_cmi",
         ":Cmm",
         ":Cmm_helpers",
         ":Cmm_invariants",
@@ -87,7 +88,7 @@ bootstrap_library(
         ":Asmlink",
         ":Asmpackager",
         ":Branch_relaxation",
-        ":Branch_relaxation_intf",
+        # ":Branch_relaxation_intf_cmi",
         ":Cmm",
         ":Cmm_helpers",
         ":Cmm_invariants",
@@ -480,11 +481,7 @@ bootstrap_module(
         ":Mach",
         ":Linear",
         ":Cmm",
-        ":Branch_relaxation_intf",
-        "//utils:Misc",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Int",
-        "//stdlib:Stdlib.Hashtbl",
+        ":Branch_relaxation_intf_cmi",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//asmcomp:__subpackages__"]
@@ -496,24 +493,34 @@ bootstrap_signature(
     opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Linear",
-        ":Cmm",
-        ":Branch_relaxation_intf",
+        ":Branch_relaxation_intf_cmi",
     ],
     data = ["//runtime:primitives"]
 )
 
-bootstrap_module(
-    name   = "Branch_relaxation_intf",
-    struct = "branch_relaxation_intf.ml",
-    opts = MODULE_OPTS,
+bootstrap_signature(
+    name = "Branch_relaxation_intf_cmi",
+    src  = "branch_relaxation_intf.mli",
+    opts = SIG_OPTS,
     deps   = STDLIB + [
         ":Linear",
         ":Cmm",
-        "//lambda:Debuginfo",
-        ## (Arch)
     ],
-    data = ["//runtime:primitives"]
+    # data = ["//runtime:primitives"]
 )
+
+# bootstrap_module(
+#     name   = "Branch_relaxation_intf",
+#     struct = "branch_relaxation_intf.ml",
+#     opts = MODULE_OPTS,
+#     deps   = STDLIB + [
+#         ":Linear",
+#         ":Cmm",
+#         "//lambda:Debuginfo",
+#         ## (Arch)
+#     ],
+#     data = ["//runtime:primitives"]
+# )
 
 bootstrap_module(
     name   = "Cmm",
@@ -1077,6 +1084,7 @@ bootstrap_signature(
     src  = "linscan.mli",
     opts = SIG_OPTS,
     deps   = STDLIB + [
+        ":Interval"
     ],
     data = ["//runtime:primitives"]
 )
@@ -1230,24 +1238,20 @@ bootstrap_module(
     sig    = "Printmach_cmi",
     opts = MODULE_OPTS,
     deps   = STDLIB + [
-        ":Reg",
-        ":Proc",
-        ":Printcmm",
-        ":Mach",
-        ":Interval",
-        ":Cmm",
-        "//stdlib:Stdlib.Printf",
-        "//stdlib:Stdlib.Nativeint",
-        "//stdlib:Stdlib.List",
-        "//stdlib:Stdlib.Int64",
-        "//stdlib:Stdlib.Format",
         "//lambda:Debuginfo",
-        "//utils:Clflags",
         "//stdlib:Stdlib.Array",
-        ## (Arch)
-    # ] + select({
-    #     "//config/arch:x86_64": ["//asmcomp/amd64:Proc"],
-    # }, no_match_error = "unsupported arch"),
+        "//stdlib:Stdlib.Format",
+        "//stdlib:Stdlib.Int64",
+        "//stdlib:Stdlib.List",
+        "//stdlib:Stdlib.Nativeint",
+        "//stdlib:Stdlib.Printf",
+        "//utils:Clflags",
+        ":Cmm",
+        ":Interval",
+        ":Mach",
+        ":Printcmm",
+        ":Proc",
+        ":Reg",
     ],
     data = ["//runtime:primitives"]
 )
@@ -1259,8 +1263,7 @@ bootstrap_signature(
     deps   = STDLIB + [
         ":Reg",
         ":Mach",
-        ":Cmm",
-        "//stdlib:Stdlib.Format",
+        ":Interval"
     ],
     data = ["//runtime:primitives"]
 )
