--- a/config/host/BUILD.bazel
+++ b/config/host/BUILD.bazel
@@ -22,7 +22,7 @@ config_setting(
 )
 
 config_setting(
-    name = "macos",
+    name = "macos?",
     constraint_values = [
         "@platforms//os:macos",
         # "@platforms//cpu:x86_64",
