--- a/middle_end/flambda/BUILD.bazel
+++ b/middle_end/flambda/BUILD.bazel
@@ -13,7 +13,7 @@ load("//config:BUILD.bzl",
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS    = ROOT_MODULE_OPTS
 
-STDLIB = ["//stdlib"]
+STDLIB = ["//boot:stdlib"]
 
 # obazl testing, build everything
 bootstrap_archive(
