--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -4,6 +4,11 @@ exports_files(["BUILD.bazel"])
 
 package(default_visibility = ["//visibility:public"])
 
+# bazel-defined platform cpus:
+# https://github.com/bazelbuild/platforms/blob/main/cpu/BUILD
+
+platform(name = "arm", constraint_values = ["@platforms//cpu:arm"])
+
 platform(name = "sys",
          parents = ["@local_config_platform//:host"],
          constraint_values = [":sys?"])
