--- a/typing/BUILD.bazel
+++ b/typing/BUILD.bazel
@@ -28,7 +28,7 @@ exports_files([
 MODULE_OPTS = ROOT_MODULE_OPTS
 SIG_OPTS    = ROOT_MODULE_OPTS
 
-STDLIB = ["//stdlib"]
+STDLIB = ["//boot:stdlib"]
 
 bootstrap_library(
     name = "typing",
